<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright [2013] [www.rapidpm.org / Sven Ruppert (sven.ruppert@rapidpm.org)]
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <!--for release only-->
  <!--<parent>-->
    <!--<groupId>org.sonatype.oss</groupId>-->
    <!--<artifactId>oss-parent</artifactId>-->
    <!--<version>7</version>-->
  <!--</parent>-->

  <groupId>org.rapidpm.workshop</groupId>
  <artifactId>berlindose2014_java8</artifactId>
  <version>1.0.0-SNAPSHOT</version>

  <packaging>jar</packaging>


  <properties>
    <parent.version>1.0.0-SNAPSHOT</parent.version>
      <nexus.ip>nexus.rapidpm.org</nexus.ip>
    <rapidpm.version>2.0.2-SNAPSHOT</rapidpm.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.symbolic.name>rapidpm-parent</project.symbolic.name>
    <jboss-javaee-all-6.0.version>3.0.2.Final</jboss-javaee-all-6.0.version>
    <jboss-as-version>7.1.1.Final</jboss-as-version>
    <arquillian-glassfish-version>1.0.0.CR4</arquillian-glassfish-version>
  </properties>


  <dependencies>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.17</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>2.4</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>2.2.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.16</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-repository-plugin</artifactId>
          <version>2.3.1</version>
        </plugin>
        <plugin>
          <groupId>com.atlassian.maven.plugins</groupId>
          <artifactId>maven-clover2-plugin</artifactId>
          <version>3.2.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-gpg-plugin</artifactId>
          <version>1.4</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>jar</goal>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>jar</goal>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <!--<dependencies>-->
        <!--<dependency>-->
        <!--<groupId>org.apache.maven.surefire</groupId>-->
        <!--<artifactId>surefire-junit47</artifactId>-->
        <!--<version>2.16</version>-->
        <!--</dependency>-->
        <!--</dependencies>-->
        <configuration>
          <forkMode>always</forkMode>
          <!--<skipTests>true</skipTests>-->
          <!--<forkCount>2.5C</forkCount>-->
          <!--<forkCount>1</forkCount>-->
          <!--<parallel>methods</parallel>-->
          <!--<threadCount>10</threadCount>-->
          <!--<reuseForks>false</reuseForks>-->
          <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
          <!--<argLine>-Xmx1024m</argLine>-->
          <!--<forkMode>always</forkMode>-->
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-repository-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>com.atlassian.maven.plugins</groupId>
        <artifactId>maven-clover2-plugin</artifactId>
      </plugin>
      <!--<plugin>-->
      <!--<artifactId>kotlin-maven-plugin</artifactId>-->
      <!--<groupId>org.jetbrains.kotlin</groupId>-->
      <!--<version>0.6.602</version>-->

      <!--<executions>-->
      <!--<execution>-->
      <!--<id>compile</id>-->
      <!--<phase>process-sources</phase>-->
      <!--<goals> <goal>compile</goal> </goals>-->
      <!--</execution>-->

      <!--<execution>-->
      <!--<id>test-compile</id>-->
      <!--<phase>process-test-sources</phase>-->
      <!--<goals> <goal>test-compile</goal> </goals>-->
      <!--</execution>-->
      <!--</executions>-->
      <!--</plugin>-->
    </plugins>
  </build>

  <!--for development of features/develop branch-->
  <distributionManagement>
    <repository>
      <id>releases</id>
      <name>RapidPM Releases</name>
      <url>http://${nexus.ip}/nexus/content/repositories/releases</url>
    </repository>
    <snapshotRepository>
      <id>snapshots</id>
      <name>RapidPM Snapshots</name>
      <url>http://${nexus.ip}/nexus/content/repositories/snapshots</url>
    </snapshotRepository>
  </distributionManagement>
  <profiles>
    <profile>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <id>sys-release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <configuration>
              <aggregate>true</aggregate>
              <show>private</show>
              <nohelp>true</nohelp>
              <failOnError>false</failOnError>
            </configuration>
            <executions>
              <execution>
                <id>aggregate</id>
                <goals>
                  <goal>jar</goal>
                  <!--<goal>test-jar</goal>-->
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <artifactId>maven-release-plugin</artifactId>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>junit</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <forkMode>always</forkMode>
              <!--<includes>-->
              <!--<include>**/junit/**</include>-->
              <!--</includes>-->
              <excludes>
                <exclude>**/perf/**</exclude>
              </excludes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>performance</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <includes>
                <include>**/perf/**</include>
              </includes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

  </profiles>





</project>